Finish user signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,14 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+            <%# same as <div class="alert alert-<%= message_type >"><%= message ></div> %>
+            <%# content_tag is used here to be readable %>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>  <%# showing debug info in development %>
     </div>
   </body>
 </html>
