--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>   <%# local: true -> showing error message surely %>
+    <%= form_with(model: @user, local: true) do |f| %>   <%# = form's action is to post to /users (URL). local: true -> showing error message surely %>
       <%= render 'shared/error_messages' %>   <%# partial of error message %>
       
       <%= f.label :name %>
