--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize(@user.errors.count, "error") %>   <%# pluralize decides 2nd argument singular or not %>
+      The form contains <%= pluralize(@user.errors.count, "error") %>.   <%# pluralize decides 2nd argument singular or not %>
     </div>
     <ul>
       <% @user.errors.full_messages.each do |msg| %>
